# PickerPacker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
loader/: Cargo.toml
loader/src/execution/: execution.rs  injection.rs  mod.rs
src/: aes.rs  builder.rs  compiler.rs  config.rs  enums.rs  features.rs  file_ops.rs  main.rs  payload.rs  template.rs  utils.rs
src/loader/: Cargo.toml
template/: Cargo.toml  CtAes.c  aes.rs  args.rs  benign.rs  build.rs  crypto.rs  execution.rs  template.rs
template/aes/: CtAes.c  TinyAES.c  aes.rs  build.rs
template/checks/: antidebug.rs  antivm.rs  checks.rs  misc.rs  mod.rs  peb.rs  wrapper.rs
template/evasion/: amsi.rs  etw.rs  misc.rs  mod.rs
template/execution/: execution.rs  injection.rs  mod.rs
template/utilities/: utils.rs
