[package]
name = "PickerPacker"
version = "0.1.0"
authors = ["Leek0gg"]
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
obfstr = "0.3.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
cc = "1.0"
