[package]
name = "PickerPacker"
version = "0.1.0"
authors = ["Leek0gg"]
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
rust_syscalls = { git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"]}
obfstr = { version = "0.3.0", optional = true }
memoffset = { version = "0.6", optional = true }
widestring = { version = "0.5.1", optional = true }
rand = { version = "0.8", optional = true }
clroxide = { version = "1.1.1", optional = true }
rspe = { git = "https://github.com/Thoxy67/rspe", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies.windows]
version = "0.54"
optional = true
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[features]
default = ["calculation"]
calculation = []
payloadFile = []
messagebox = ["windows"]
embedded = []
ShellcodeExecuteDefault = ["windows"]
TinyAES = ["cc"]
CTAES = ["cc"]