[package]
name = "PickerPacker"
version = "0.1.0"
authors = ["Leek0gg"]
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = "fat"         # Aggressive Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
rust_syscalls = { git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"], optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies.windows-sys]
version = "0.59"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_Input_Ime",
    "Win32_System_ProcessStatus",
    "Win32_System_Power",
    "Win32_System_Memory",
]

[features]
default = ["embedded"]
embedded = []
ShellcodeExecuteDefault = []
ShellcodeExecuteFiber = ["windows-sys"]
ShellcodeExecuteCreateTimerQueueTimer = ["windows-sys"]
ShellcodeExecuteEnumUILanguages = ["windows-sys"]
ShellcodeExecuteVerifierEnumerate = ["windows-sys"]
ShellcodeExecuteEnumChildWindows = ["windows-sys"]
ShellcodeExecuteEnumDesktopWindows = ["windows-sys"]
ShellcodeExecuteEnumSystemLocales = ["windows-sys"]
ShellcodeExecuteCertEnumSystemStoreLocation = ["windows-sys"]
ShellcodeExecuteEnumWindowStations = ["windows-sys"]
ShellcodeExecuteEnumDisplayMonitors = ["windows-sys"]
ShellcodeExecuteImageGetDigestStream = ["windows-sys"]
ShellcodeExecuteCertEnumSystemStore = ["windows-sys"]
ShellcodeExecuteEnumTimeFormats = ["windows-sys"]
ShellcodeExecuteCryptEnumOIDInfo = ["windows-sys"]
ShellcodeExecuteImmEnumInputContext = ["windows-sys"]
ShellcodeExecuteEnumPropsW = ["windows-sys"]
ShellcodeExecuteEnumLanguageGroupLocalesW = ["windows-sys"]
ShellcodeExecuteSymEnumProcesses = ["windows-sys"]
ShellcodeExecuteCopyFileExW = ["windows-sys"]
ShellcodeExecuteEnumObjects = ["windows-sys"]
ShellcodeExecuteEnumResourceTypesW = ["windows-sys"]
ShellcodeExecuteEnumPageFilesW = ["windows-sys"]
ShellcodeExecuteEnumDirTreeW = ["windows-sys"]
ShellcodeExecuteEnumFontFamiliesW = ["windows-sys"]
ShellcodeExecuteEnumDesktopsW = ["windows-sys"]
ShellcodeExecuteInitOnceExecuteOnce = ["windows-sys"]
ShellcodeExecuteEnumThreadWindows = ["windows-sys"]
ShellcodeExecuteEnumerateLoadedModulesW64 = ["windows-sys"]
ShellcodeExecuteEnumFontsW = ["windows-sys"]
ShellcodeExecuteEnumCalendarInfoW = ["windows-sys"]
ShellcodeExecuteEnumWindows = ["windows-sys"]
ShellcodeExecuteEnumPwrSchemes = ["windows-sys"]
ShellcodeExecuteSymFindFileInPath = ["windows-sys"]
ShellcodeExecuteFlsAlloc = ["windows-sys"]
TinyAES = ["cc"]
CTAES = ["cc"]
InjectionDefaultLocal = ["rust_syscalls"]
InjectionMappingLocal = ["rust_syscalls"]
InjectionFunctionStomping = ["windows-sys"]
UtilitySelfDeletion = ["windows-sys"]
CheckAntiDebugProcessDebugFlags = ["windows-sys"]
