# To change a lot 

[package]
name = "PickerPacker"
version = "0.1.0"
author = "Leek0gg"
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
obfstr = "0.3.0"
memoffset = "0.6"
widestring = "0.5.1"
rand = "0.8"
clroxide = "1.1.1"
rust_syscalls = {git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"]}
rspe = { git = "https://github.com/Thoxy67/rspe"}

[dependencies.windows]
version = "0.54"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[features]
messagebox = []
calculation = []
embedded = []
payloadFile = []